<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.quangminhdang.linkintercept.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/buttons_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/open_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/openLink_button" />

                <Button
                    android:id="@+id/clear_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/clearLink_button" />

            </LinearLayout>

            <TextView
                android:id="@+id/urlState_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/urlState_textView" />

            <TextView
                android:id="@+id/urlLength_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mainLabelForValidUrl" />

            <EditText
                android:id="@+id/interceptedLink_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint"
                android:inputType="textMultiLine|textUri"
                android:text="" />

            <TextView
                android:id="@+id/urlParameters_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/urlParametersTextViewPlaceholder" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
